# Computer-Graphics-RayTracing

./: CMakeLists.txt  Cone.cpp  Cone.h  Cylinder.cpp  Cylinder.h  OpenGLProject.vcxproj  OpenGLProject.vcxproj.filters  Plane.h  README.md  Ray.cpp  RayTracer.cpp  SceneObject.cpp  SceneObject.h  Shader.h  Sphere.cpp  Sphere.h  Texture.cpp  Texture.h  TextureOpenIL.cpp  Torus.cpp  Torus.h  plane.cpp
include/: Cone.h  Cylinder.h  Plane.h  SceneObject.h  Shader.h
src/: Cone.cpp  Cylinder.cpp  RayTracer.cpp  SceneObject.cpp  Sphere.cpp  plane.cpp
